2002-10-23  Richard Williamson  <rjw@apple.com>

        Cleaned up months of accumulated cruft.
        Added base class to the three WebResourceHandleDelegate implementors.
        Removed superfluous handle references to controller callbacks.
        More can still be done.
        All in the name of fixing 3076050.
        
        * Misc.subproj/WebKitErrors.h:
        * Plugins.subproj/WebBaseNetscapePluginStream.m:
        (-[WebBaseNetscapePluginStream setResponse:]):
        * Plugins.subproj/WebNetscapePluginRepresentation.m:
        (-[WebNetscapePluginRepresentation receivedData:withDataSource:]):
        (-[WebNetscapePluginRepresentation receivedError:withDataSource:]):
        (-[WebNetscapePluginRepresentation finishedLoadingWithDataSource:]):
        * Plugins.subproj/WebNetscapePluginStream.h:
        * Plugins.subproj/WebNetscapePluginStream.m:
        (-[WebNetscapePluginStream initWithRequest:pluginPointer:notifyData:]):
        (-[WebNetscapePluginStream dealloc]):
        (-[WebNetscapePluginStream start]):
        (-[WebNetscapePluginStream stop]):
        (-[WebNetscapePluginStream handle:willSendRequest:]):
        (-[WebNetscapePluginStream handle:didReceiveResponse:]):
        (-[WebNetscapePluginStream handle:didReceiveData:]):
        (-[WebNetscapePluginStream handleDidFinishLoading:]):
        (-[WebNetscapePluginStream handle:didFailLoadingWithError:]):
        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge reportBadURL:]):
        * WebCoreSupport.subproj/WebSubresourceClient.h:
        * WebCoreSupport.subproj/WebSubresourceClient.m:
        (-[WebSubresourceClient initWithLoader:dataSource:]):
        (-[WebSubresourceClient dealloc]):
        (+[WebSubresourceClient startLoadingResource:withURL:referrer:forDataSource:]):
        (-[WebSubresourceClient receivedError:]):
        (-[WebSubresourceClient handle:willSendRequest:]):
        (-[WebSubresourceClient handle:didReceiveResponse:]):